[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
advent-of-code-data = "^1.1.1"
numpy = "^1.21.4"
aoc-utils = { path = "aoc-utils" }
sympy = "^1.9"
more-itertools = "^8.12.0"
asciinema = "^2.1.0"

[tool.poetry.dev-dependencies]
polyglot = { git = "git@github.com:buckley-w-david/polyglot.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
