[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["David Buckley <david@davidbuckley.ca>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
aoc-utils = { path = "aoc-utils" }
advent-of-code-data = "^2.0.1"
numpy = "^1.26.2"
sympy = "^1.12"
more-itertools = "^10.1.0"

[tool.poetry.dev-dependencies]
polyglot = { git = "https://github.com/buckley-w-david/polyglot.git" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportWildcardImportFromLibrary = false
