[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [{ name = "David Buckley", email = "david@davidbuckley.ca" }]
requires-python = ">=3.9,<4.0"
dependencies = [
  "advent-of-code-data>=2.0.1,<3",
  "numpy>=1.26.2,<2",
  "sympy>=1.12,<2",
  "more-itertools>=10.1.0,<11",
  "scipy>=1.11.4,<2",
  "aoc-utils",
]

[dependency-groups]
dev = ["polyglot"]

[tool.uv]
package = false

[tool.uv.sources]
polyglot = { git = "https://github.com/buckley-w-david/polyglot.git" }
aoc-utils = { path = "aoc-utils" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportWildcardImportFromLibrary = false
