[project]
name = "aoc-utils"
version = "0.8.9"
description = ""
authors = [{ name = "David Buckley", email = "david@davidbuckley.ca" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"

[dependency-groups]
dev = [
    "pytest>=5.2,<6",
    "black>=21.12b0,<22",
    "mypy>=0.910,<0.911",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
